--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Allows mods to add rebindable key bindings",
   "license": "MIT",
-  "homepage": "https://github.com/dmitmel/input-api",
+  "homepage": "https://github.com/CCDirectLink/input-api",
   "module": true,
   "postload": "postload.js"
 }
